@@ -40,6 +40,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.8.10" date="2021-04-09">
+      <description>
+	<p>improved hq pitch util.</p>
+      </description>
+    </release>
+
     <release version="3.8.9" date="2021-04-09">
       <description>
 	<p>minor improvements.</p>
