@@ -1,3 +1,8 @@
+ags (3.8.10)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved ags_hq_pitch_util.c
+
 ags (3.8.9)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
